--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sprinkle & Sip Cafe</title>
         <link rel="stylesheet" href="styles.css">
+
         <!-- ลิงก์ไปยังฟอนต์ Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Pacifico&display=swap" rel="stylesheet">
     </head>
@@ -78,7 +79,7 @@
             </div>
         </div>
     </section>
-    
+    <script src = "asw.js"></script>
 
 </body>
 </html>
