enter the commit

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                     <a href="#" class="user-icon">
                         <i class="fas fa-user"></i>
                     </a>
-                    <div class="hamburger">
-                        <span class="bar"></span>
-                        <span class="bar"></span>
-                        <span class="bar"></span>
+                    <div class="dots-menu">
+                        <span class="dot"></span>
+                        <span class="dot"></span>
+                        <span class="dot"></span>
                     </div>
                 </div>
             </div>
