enter the commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="index.html">
                     <span class="logo-text">Sprinkle</span>
                     <span class="logo-and">&</span>
-                    <span class="logo-text">Sip Cafe</span>
+                    <span class="logo-text">Sip</span>
                 </a>
             </div>
 
