--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
                 </a>
             </div>
 
+            <!-- Hamburger Icon -->
+            <div class="hamburger" id="hamburger">
+                <i class="fas fa-bars"></i>
+            </div>
+
             <!-- Navigation Menu -->
-            <ul class="nav-menu">
+            <ul class="nav-menu" id="nav-menu">
                 <li><a href="#" class="nav-link active">Home</a></li>
                 <li class="dropdown">
                     <a href="#" class="nav-link">Menu <i class="fas fa-chevron-down"></i></a>
@@ -69,11 +74,6 @@
                     <a href="#" class="user-icon">
                         <i class="fas fa-user"></i>
                     </a>
-                    <div class="dots-menu">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </div>
                 </div>
             </div>
         </div>
